--- a/ui/src/app/views/workflow/add/workflow.add.html
+++ b/ui/src/app/views/workflow/add/workflow.add.html
@@ -315,7 +315,7 @@
 
                                     <!-- ######### WORKFLOW PIPELINE SECOND STEP ######### -->
                                     <ng-container *ngSwitchCase="1">
-                                        <app-workflow-node-add-wizard [project]="project" [loading]="loading" [canCreateFork]="true" [display]="true"
+                                        <app-workflow-node-add-wizard [project]="project" [loading]="loading" [display]="true"
                                             (nodeCreated)="createWorkflow($event)"></app-workflow-node-add-wizard>
                                     </ng-container>
                                 </div>
