fix(ui): adjust css on application create view

--- a/ui/src/app/views/application/add/application.add.html
+++ b/ui/src/app/views/application/add/application.add.html
@@ -1,7 +1,7 @@
 <div id="AddApplication" class="scrollingContent">
     <div class="paddingContent">
         <div class="viewContent">
-            <form nz-form (ngSubmit)="createApplication()">
+            <form nz-form (ngSubmit)="createApplication()" class="nzSegment">
                 <h2>Create new application</h2>
                 <nz-row>
                     <nz-col [nzSpan]="16" [nzOffset]="4">
