--- a/ui/src/app/views/application/add/application.add.scss
+++ b/ui/src/app/views/application/add/application.add.scss
@@ -6,6 +6,10 @@
   align-content: stretch;
   height: 100%;
 
+  form {
+    padding-top: 20px;
+  }
+
   h2 {
     text-align: center;
   }
@@ -21,5 +25,9 @@
   .app-icon {
     height: 5em;
     width: 5em;
+  }
+
+  button {
+    margin-left: 15px;
   }
 }
