--- a/ui/src/app/views/settings/group/edit/group.edit.html
+++ b/ui/src/app/views/settings/group/edit/group.edit.html
@@ -16,7 +16,7 @@
                             </nz-form-item>
                         </nz-col>
                     </nz-row>
-                    <nz-row *ngIf="group.organization || true">
+                    <nz-row *ngIf="group.organization">
                         <nz-col [nzSpan]="24">
                             <nz-form-item>
                                 <nz-form-label>Organization</nz-form-label>
