--- a/ui/src/app/views/application/add/application.add.scss
+++ b/ui/src/app/views/application/add/application.add.scss
@@ -6,21 +6,28 @@
   align-content: stretch;
   height: 100%;
 
+  form {
+    padding-top: 20px;
+  }
+
   h2 {
     text-align: center;
   }
 
-  .ui.radio.checkbox {
-    border: 1px solid $darkGreyColor;
-    padding: 10px 30px;
+  nz-select {
     width: 100%;
   }
 
-  .ui.radio.checkbox.active {
-    border-color: #202f3c;
+  nz-form-item {
+    margin-top: 24px;
   }
+
   .app-icon {
     height: 5em;
     width: 5em;
+  }
+
+  button {
+    margin-left: 15px;
   }
 }
