--- a/ui/src/app/views/settings/group/edit/group.edit.html
+++ b/ui/src/app/views/settings/group/edit/group.edit.html
@@ -4,137 +4,138 @@
         <div *ngIf="group;then showGroup;else loadGroup"></div>
         <ng-template #showGroup>
             <div id="GroupEdit">
-                <form class="ui form">
-                    <div class="ui grid">
-                        <div class="one column row">
-                            <div class="column">
-                                <div class="field">
-                                    <label>{{'group_name' | translate}}</label>
-                                    <input class="ui input" type="text" name="name" [(ngModel)]="group.name"
-                                        [disabled]="loading">
-                                </div>
-                                <div *ngIf="group.organization" class="field">
-                                    <label>Organization</label>
-                                    <input class="ui input" type="text" name="organization"
-                                        [ngModel]="group.organization" readonly>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="one column row">
-                            <div class="right floated column">
-                                <ng-container *ngIf="currentAuthSummary.isAdmin() || currentUserIsAdminOnGroup">
-                                    <button class="ui green right floated button" *ngIf="group.id"
-                                        [class.loading]="loading" (click)="saveGroup()">
-                                        <i class="save icon"></i>{{ 'btn_save' | translate }}
-                                    </button>
-                                    <app-delete-button *ngIf="group.id" class="right floated" (event)="clickDelete()"
-                                        [loading]="deleteLoading"></app-delete-button>
-                                </ng-container>
-                                <button *ngIf="!group.id" class="ui green right floated button"
-                                    [class.loading]="loading" (click)="saveGroup()">
-                                    <i class="plus icon"></i>{{ 'btn_add' | translate }}
-                                </button>
-                            </div>
-                        </div>
-                        <div class="two column row" *ngIf="group.id">
-                            <div class="column">
-                                <div class="two fields" *ngIf="users">
-                                    <div class="field">
-                                        <label>{{ 'group_members' | translate }}</label>
-                                        <sm-select *ngIf="currentAuthSummary.isAdmin() || currentUserIsAdminOnGroup"
-                                            class="search" [options]="{'fullTextSearch': true}" [disabled]="loading"
-                                            [(model)]="addUserUsername">
-                                            <option *ngFor="let user of users" [value]="user.username">
-                                                {{user.fullname}} - {{user.username}} {{user.organization ?
-                                                '(' + user.organization + ')' : ''}}
-                                            </option>
-                                        </sm-select>
-                                    </div>
-                                    <div class="buttons"
-                                        *ngIf="currentAuthSummary.isAdmin() || currentUserIsAdminOnGroup">
-                                        <button class="ui green button" [class.loading]="loading"
-                                            (click)="clickAddMember()">
-                                            <i class="add icon"></i>{{ 'btn_add' | translate }}
-                                        </button>
-                                    </div>
-                                </div>
-
-                                <div class="ui info message" *ngIf="group.members && group.members?.length === 0">
-                                    {{ 'group_no_member' | translate }}
-                                </div>
-
-                                <table class="ui fixed celled table" *ngIf="group.members && group.members?.length > 0">
-                                    <thead>
-                                        <tr>
-                                            <th class="five wide">{{ 'user_label_username' | translate }}</th>
-                                            <th class="five wide">{{ 'user_label_fullname' | translate }}</th>
-                                            <th class="six wide"></th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        <tr *ngFor="let v of group.members">
-                                            <td>
-                                                <i class="fa fa-user-circle-o" *ngIf="v.admin"
-                                                    title="{{ 'group_user_is_admin' | translate }}"></i>
-                                                {{v?.username}}
-                                            </td>
-                                            <td>
-                                                {{v?.fullname}}
-                                            </td>
-                                            <td>
-                                                <ng-container
-                                                    *ngIf="currentAuthSummary.isAdmin() || currentUserIsAdminOnGroup">
-                                                    <app-delete-button *ngIf="v?.username" class="ui right floated"
-                                                        (event)="clickRemoveMember(v.username)"
-                                                        [loading]="deleteLoading"></app-delete-button>
-                                                    <button *ngIf="!v.admin" class="ui right floated button"
-                                                        [class.loading]="loading" (click)="clickSetAdmin(v.username)">
-                                                        <i class="add icon"></i>
-                                                        {{ 'group_btn_set_admin' | translate }}
-                                                    </button>
-                                                    <button *ngIf="v.admin" class="ui right floated button"
-                                                        [class.loading]="loading" (click)="clickUnsetAdmin(v.username)">
-                                                        <i class="minus icon"></i>
-                                                        {{ 'group_btn_unset_admin' | translate }}
-                                                    </button>
-                                                </ng-container>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
-                            <div class="column">
-                                <div class="field">
-                                    <label>Usage in projects</label>
-                                    <ng-container *ngIf="!projects || projects.length === 0">
-                                        <div class="ui info message">This group is not used in any project</div>
-                                    </ng-container>
-                                    <ng-container *ngIf="projects && projects.length > 0">
-                                        <table class="ui fixed celled table">
-                                            <thead>
-                                                <tr>
-                                                    <th class="five wide">Project key</th>
-                                                    <th class="five wide">Project name</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr *ngFor="let p of projects">
-                                                    <td>
-                                                        <a [routerLink]="['/project', p.key]"
-                                                            [queryParams]="{tab: 'permissions'}">
-                                                            {{p.key}}
-                                                        </a>
-                                                    </td>
-                                                    <td>{{p.name}}</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </ng-container>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <form nz-form>
+                    <nz-row>
+                        <nz-col [nzSpan]="24">
+                            <nz-form-item>
+                                <nz-form-label>Group name</nz-form-label>
+                                <nz-form-control>
+                                    <input nz-input type="text" name="name" [(ngModel)]="group.name"
+                                           [readonly]="loading">
+                                </nz-form-control>
+                            </nz-form-item>
+                        </nz-col>
+                    </nz-row>
+                    <nz-row *ngIf="group.organization">
+                        <nz-col [nzSpan]="24">
+                            <nz-form-item>
+                                <nz-form-label>Organization</nz-form-label>
+                                <nz-form-control>
+                                    <input nz-input type="text" name="organization"
+                                           [ngModel]="group.organization" readonly>
+                                </nz-form-control>
+                            </nz-form-item>
+                        </nz-col>
+                    </nz-row>
+                    <nz-row *ngIf="currentAuthSummary.isAdmin() || currentUserIsAdminOnGroup">
+                        <nz-col [nzSpan]="24">
+                            <button nz-button nzType="primary" [nzLoading]="loading" (click)="saveGroup()">
+                                <i nz-icon nzType="save" nzTheme="outline"></i>Save
+                            </button>
+                            <button *ngIf="group.id" nz-button nzDanger nzType="primary" (nzOnConfirm)="clickDelete()"
+                                    [nzLoading]="deleteLoading" nzPopconfirmPlacement="topLeft"
+                                    nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this group ?">
+                                <i nz-icon nzType="delete" nzTheme="outline"></i>Delete
+                            </button>
+                        </nz-col>
+                    </nz-row>
                 </form>
+                <nz-row>
+                    <nz-col [nzSpan]="12">
+                        <form nz-form *ngIf="currentAuthSummary.isAdmin() || currentUserIsAdminOnGroup">
+                            <nz-form-item>
+                                <nz-form-label>Members</nz-form-label>
+                                <nz-form-control>
+                                    <nz-select nzShowSearch name="username" [nzLoading]="loading" [(ngModel)]="addUserUsername">
+                                        <nz-option *ngFor="let user of users" [nzValue]="user.username" nzLabel="{{user.fullname}} - {{user.username}} {{user.organization ?
+                                            '(' + user.organization + ')' : ''}}"></nz-option>
+                                    </nz-select>
+                                </nz-form-control>
+                                <button nz-button nzType="primary" [nzLoading]="loading" (click)="clickAddMember()">
+                                    <i nz-icon nzType="plus" nzTheme="outline"></i>Add
+                                </button>
+                            </nz-form-item>
+                        </form>
+                        <nz-alert *ngIf="group.members && group.members?.length === 0" nzType="info" nzMessage="No member in the group"></nz-alert>
+                        <nz-table *ngIf="group.members && group.members?.length > 0" [nzData]="displayedMembers" #members>
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Username
+                                        <nz-filter-trigger [(nzVisible)]="usernameFilterVisible" [nzActive]="usernameFilter?.length > 0" [nzDropdownMenu]="usernameDropdown">
+                                            <i nz-icon nzType="search"></i>
+                                        </nz-filter-trigger>
+                                    </th>
+                                    <th>Fullname</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr *ngFor="let m of members.data">
+                                    <td>
+                                        <i class="fa fa-user-circle-o" *ngIf="m.admin"
+                                           title="{{ 'group_user_is_admin' | translate }}"></i>
+                                        {{m?.username}}
+                                    </td>
+                                    <td>
+                                        {{m?.fullname}}
+                                    </td>
+                                    <td>
+                                        <ng-container *ngIf="currentAuthSummary.isAdmin() || currentUserIsAdminOnGroup">
+                                            <button nz-button nzDanger nzType="primary" *ngIf="m?.username" [nzLoading]="deleteLoading"
+                                                    (nzOnConfirm)="clickRemoveMember(m.username)"
+                                                    nz-popconfirm nzPopconfirmTitle="Are you sure you want to remove {{m.fullname}} from this group ?">
+                                                <i nz-icon nzType="delete" nzTheme="outline"></i>Remove
+                                            </button>
+                                            <button nz-button *ngIf="!m.admin"
+                                                    [nzLoading]="loading" (click)="clickSetAdmin(m.username)">
+                                                <i nz-icon nzType="plus" nzTheme="outline"></i>Admin
+                                            </button>
+                                            <button nz-button *ngIf="m.admin"
+                                                    [nzLoading]="loading" (click)="clickUnsetAdmin(m.username)">
+                                                <i class="minus icon"></i>Admin
+                                            </button>
+                                        </ng-container>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </nz-table>
+                        <nz-dropdown-menu #usernameDropdown="nzDropdownMenu">
+                            <div class="ant-table-filter-dropdown">
+                                <div class="search-box">
+                                    <input type="text" nz-input placeholder="Search name" [(ngModel)]="usernameFilter" />
+                                    <button nz-button nzSize="small" nzType="primary" (click)="searchUsername()" class="search-button">Search</button>
+                                    <button nz-button nzSize="small" (click)="usernameFilter = ''; searchUsername()">Reset</button>
+                                </div>
+                            </div>
+                        </nz-dropdown-menu>
+                    </nz-col>
+                    <nz-col [nzSpan]="12" class="projectList">
+                        <h3>Usage in projects</h3>
+                        <nz-alert *ngIf="!projects || projects.length === 0" nzType="info" nzMessage="This group is not used in any project"></nz-alert>
+                        <ng-container *ngIf="projects && projects.length > 0">
+                            <nz-table [nzData]="projects" #projList>
+                                <thead>
+                                    <tr>
+                                        <th>Project key</th>
+                                        <th>Project name</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let p of projList.data">
+                                        <td>
+                                            <a [routerLink]="['/project', p.key]"
+                                               [queryParams]="{tab: 'permissions'}">
+                                                {{p.key}}
+                                            </a>
+                                        </td>
+                                        <td>{{p.name}}</td>
+                                    </tr>
+                                </tbody>
+                            </nz-table>
+                        </ng-container>
+                    </nz-col>
+                </nz-row>
             </div>
         </ng-template>
         <ng-template #loadGroup>
