--- a/ui/src/app/views/workflow/run/node/pipeline/variables/job.variable.html
+++ b/ui/src/app/views/workflow/run/node/pipeline/variables/job.variable.html
@@ -1,28 +1,23 @@
-<ng-template let-context let-modal="modal" #jobVariablesModal>
-    <div class="header">{{ 'pipeline_job_variable_title' | translate }}</div>
-    <div class="content scrolling">
-        <h4 *ngIf="varGit.length > 0">{{ 'pipeline_job_variable_git' | translate }}</h4>
-        <app-parameter-list *ngIf="varGit.length > 0" [parameters]="varGit" mode="job"></app-parameter-list>
-        <h4 *ngIf="varCDS.length > 0">{{ 'pipeline_job_variable_cds' | translate }}</h4>
-        <app-parameter-list *ngIf="varCDS.length > 0" [parameters]="varCDS" mode="job"></app-parameter-list>
-        <h4 *ngIf="varBuild.length > 0">{{ 'pipeline_job_variable_build' | translate }}</h4>
-        <app-parameter-list *ngIf="varBuild.length > 0" [parameters]="varBuild" mode="job"></app-parameter-list>
-        <h4 *ngIf="varEnvironment.length > 0">{{ 'pipeline_job_variable_env' | translate }}</h4>
-        <app-parameter-list *ngIf="varEnvironment.length > 0" [parameters]="varEnvironment" mode="job">
-        </app-parameter-list>
-        <h4 *ngIf="varApplication.length > 0">{{ 'pipeline_job_variable_app' | translate }}</h4>
-        <app-parameter-list *ngIf="varApplication.length > 0" [parameters]="varApplication" mode="job">
-        </app-parameter-list>
-        <h4 *ngIf="varPipeline.length > 0">{{ 'pipeline_job_variable_pip' | translate }}</h4>
-        <app-parameter-list *ngIf="varPipeline.length > 0" [parameters]="varPipeline" mode="job"></app-parameter-list>
-        <h4 *ngIf="varProject.length > 0">{{ 'pipeline_job_variable_project' | translate }}</h4>
-        <app-parameter-list *ngIf="varProject.length > 0" [parameters]="varProject" mode="job"></app-parameter-list>
-        <h4 *ngIf="varParent.length > 0">{{ 'pipeline_job_variable_parent' | translate }}</h4>
-        <app-parameter-list *ngIf="varParent.length > 0" [parameters]="varParent" mode="job"></app-parameter-list>
-        <h4 *ngIf="varWorkflow.length > 0">{{ 'pipeline_job_variable_workflow' | translate }}</h4>
-        <app-parameter-list *ngIf="varWorkflow.length > 0" [parameters]="varWorkflow" mode="job"></app-parameter-list>
-    </div>
-    <div class="actions">
-        <button class="ui grey button" (click)="clickClose()">{{ 'btn_close' | translate }}</button>
-    </div>
-</ng-template>
+<div class="variables">
+    <h4 *ngIf="varGit.length > 0">{{ 'pipeline_job_variable_git' | translate }}</h4>
+    <app-parameter-list *ngIf="varGit.length > 0" [parameters]="varGit" mode="job"></app-parameter-list>
+    <h4 *ngIf="varCDS.length > 0">{{ 'pipeline_job_variable_cds' | translate }}</h4>
+    <app-parameter-list *ngIf="varCDS.length > 0" [parameters]="varCDS" mode="job"></app-parameter-list>
+    <h4 *ngIf="varBuild.length > 0">{{ 'pipeline_job_variable_build' | translate }}</h4>
+    <app-parameter-list *ngIf="varBuild.length > 0" [parameters]="varBuild" mode="job"></app-parameter-list>
+    <h4 *ngIf="varEnvironment.length > 0">{{ 'pipeline_job_variable_env' | translate }}</h4>
+    <app-parameter-list *ngIf="varEnvironment.length > 0" [parameters]="varEnvironment" mode="job"></app-parameter-list>
+    <h4 *ngIf="varApplication.length > 0">{{ 'pipeline_job_variable_app' | translate }}</h4>
+    <app-parameter-list *ngIf="varApplication.length > 0" [parameters]="varApplication" mode="job"></app-parameter-list>
+    <h4 *ngIf="varPipeline.length > 0">{{ 'pipeline_job_variable_pip' | translate }}</h4>
+    <app-parameter-list *ngIf="varPipeline.length > 0" [parameters]="varPipeline" mode="job"></app-parameter-list>
+    <h4 *ngIf="varProject.length > 0">{{ 'pipeline_job_variable_project' | translate }}</h4>
+    <app-parameter-list *ngIf="varProject.length > 0" [parameters]="varProject" mode="job"></app-parameter-list>
+    <h4 *ngIf="varParent.length > 0">{{ 'pipeline_job_variable_parent' | translate }}</h4>
+    <app-parameter-list *ngIf="varParent.length > 0" [parameters]="varParent" mode="job"></app-parameter-list>
+    <h4 *ngIf="varWorkflow.length > 0">{{ 'pipeline_job_variable_workflow' | translate }}</h4>
+    <app-parameter-list *ngIf="varWorkflow.length > 0" [parameters]="varWorkflow" mode="job"></app-parameter-list>
+</div>
+<div *nzModalFooter>
+    <button nz-button (click)="clickClose()">Close</button>
+</div>
