--- a/ui/src/app/shared/workflow/node/run/node.run.param.html
+++ b/ui/src/app/shared/workflow/node/run/node.run.param.html
@@ -42,7 +42,7 @@
         </button>
         <nz-dropdown-menu #menu="nzDropdownMenu">
             <ul nz-menu>
-                <li nz-menu-item [nzDisabled]="workflow?.from_repository" (click)="run(true, false)">
+                <li nz-menu-item [nzDisabled]="workflow?.from_repository" (click)="run(true, false)" nz-tooltip nzTooltipTitle="When you resync this run, it will update the pipelines linked to this run with your last editions. It won't resync your project variables.">
                     <i class="sync icon"></i>{{'workflow_resync' | translate }}
                 </li>
                 <li nz-menu-item [nzDisabled]="currentNodeRun?.status !== 'Fail'" (click)="run(false, true)">
